--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>hello world</h1>
     <div class="con">
         <div class="upper-part">
             <h1 style="text-align: center;">PC COMPONENT</h1>
